--- a/mwh1.html
+++ b/mwh1.html
@@ -18,7 +18,7 @@
          <nav>  <!--FLEX ITEM DI HEAD MA FLEX CONTAINER DI LOGO E FLEX ITEM NAV -->
 		         <div id="logo">ELECTROLUS</div>
              <div class="flex-itemnav">
-               <a href="#">Home</a>
+               <a href="mwh1.html">Home</a>
                <a  href="#">Computer</a>
                <a  href="mwh2smartphone.html">Smartphone</a>
                <a  href="#">Accessori</a>
