--- a/mwh2smartphone.html
+++ b/mwh2smartphone.html
@@ -18,9 +18,9 @@
          <nav>  <!--FLEX ITEM DI HEAD MA FLEX CONTAINER DI LOGO E FLEX ITEM NAV -->
 		         <div id="logo">ELECTROLUS</div>
              <div class="flex-itemnav">
-               <a href="#">Home</a>
+               <a href="mwh1.html">Home</a>
                <a  href="#">Computer</a>
-               <a  href="smartphone.html">Smartphone</a>
+               <a  href="mwh2smartphone.html">Smartphone</a>
                <a  href="#">Accessori</a>
                <a  href="#">Contatti</a>
                <a  href="#">Registrati</a>
@@ -45,9 +45,9 @@
 
     <div class="searchbox">
    <h1>TUTTI I NOSTRI TELEFONI</h1>
-   <div class="searchbox-item">
-   <input class="search-txt" type="text" name="" placeholder="Type to search">
-   <img class="search-btn" src="images/search.jpg"></img>
+   <div id="searchbox-item">
+   <input type="text" name="" placeholder="Type to search">
+   <img src="images/search.jpg"></img>
   </div>
 </div>
 
